--- a/style.css
+++ b/style.css
@@ -9,15 +9,34 @@ html {
 body {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 40px 20px 50px 1fr 1fr 1fr 1fr 1fr 1fr 10px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 10px;
     grid-gap: 5px;
     height: 100vh;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
 }
 
+.topGrid {
+    grid-area: 1 / 1 / 2 / 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 50px;
+}
+
+.img1 {
+    grid-area: 1 / 1 / 3 / 2;
+    height: 250px;
+    background-color: dimgray;
+}
+
+.img2 {
+    grid-area: 1 / 3 / 3 / 4;
+    height: 250px;
+    background-color: dimgray;
+}
+
 h1 {
-    grid-area: 1 / 1 / 2 / 3 ;
+    grid-area: 1 / 1 / 2 / 4 ;
     background-color: lightgray;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
@@ -27,7 +46,7 @@ h1 {
 }
 
 #topUnder {
-    grid-area: 2 / 1 / 3 / 3 ;
+    grid-area: 2 / 1 / 3 / 4 ;
     background-color: lightgray;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
@@ -37,6 +56,7 @@ h1 {
 }
 
 nav {
+    grid-area: 3 / 1 / 4 / 4 ;
     display: flex;
     flex-direction: row; 
     justify-content: center; 
@@ -59,7 +79,7 @@ a, p {
 }
 
 nav, footer {
-    grid-column: span 2;
+    grid-column: span 4;
  }
 
 #scroll-up {
@@ -67,16 +87,16 @@ nav, footer {
 }
 
 #footer {
-    grid-area: 9 / 1 / 10 / 3;
+    grid-area: 7 / 1 / 8 / 3;
     background-color: gray;
     font-family: 'Courier New', Courier, monospace;
-    color: white;
+    margin: -10px;
 }
 
 /* Live Section */
 
 #live {
-    grid-area: 4 / 1 / 5 / 3;
+    grid-area: 2 / 1 / 3 / 4;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 10% 1fr;
@@ -88,14 +108,14 @@ nav, footer {
 }
 
 .scroll-live {
-    grid-area: 2 / 2 / 3 / 4;
+    grid-area: 2 / 2 / 3 / 3;
 }
 
 #header-live {
-    grid-area: 1 / 1 / 2 / 3;
+    grid-area: 1 / 1 / 2 / 2;
 }
 
-#restream {
+#livestream {
     grid-area: 2 / 1 / 3 / 2;
 }
 
@@ -111,15 +131,22 @@ nav, footer {
     grid-area: 3 / 1 / 4 / 3;
     
     text-align: center;
+    color: red;
+}
+
+#main-txt2 {
+    grid-area: 1 / 2 / 2 / 3;
+    
+    text-align: center;
 }
 
 /* Edits Section */
 
 #edits {
-    grid-area: 6 / 1 / 7 / 4;
+    grid-area: 4 / 1 / 5 / 4;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px 35px 1fr 100px;
+    grid-template-rows: 50px 270px 100px;
     justify-items: center;
     align-items: center;
 
@@ -127,7 +154,7 @@ nav, footer {
 }
 
 .scroll-edits {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: 3 / 2 / 4 / 3;
 }
 
 #header-edits {
@@ -135,19 +162,19 @@ nav, footer {
 }
 
 #clip1 {
-    grid-area: 3 / 1 / 4 / 2 ;
+    grid-area: 2 / 1 / 3 / 2 ;
     margin: 5px;
     align-items: center;
 }
 
 #clip2 {
-    grid-area: 3 / 2 / 4 / 3 ;
+    grid-area: 2 / 2 / 3 / 3 ;
     margin: 5px;
     align-items: center;
 }
 
 #clip3 {
-    grid-area: 3 / 3 / 4 / 4 ;
+    grid-area: 2 / 3 / 3 / 4 ;
     margin: 5px;
     align-items: center;
 }
@@ -155,10 +182,10 @@ nav, footer {
 /* Past Streams Section */
 
 #streams {
-    grid-area: 7 / 1 / 8 / 4;
+    grid-area: 5 / 1 / 6 / 4;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px 35px 1fr 100px;
+    grid-template-rows: 50px 270px 100px;
     justify-items: center;
     align-items: center;
 
@@ -166,7 +193,7 @@ nav, footer {
 }
 
 .scroll-streams {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: 3 / 2 / 4 / 3;
 }
 
 #header-streams {
@@ -174,19 +201,19 @@ nav, footer {
 }
 
 #stream1 {
-    grid-area: 3 / 1 / 4 / 2 ;
+    grid-area: 2 / 1 / 3 / 2 ;
     margin: 5px;
     align-items: center;
 }
 
 #stream2 {
-    grid-area: 3 / 2 / 4 / 3 ;
+    grid-area: 2 / 2 / 3 / 3 ;
     margin: 5px;
     align-items: center;
 }
 
 #stream3 {
-    grid-area: 3 / 3 / 4 / 4 ;
+    grid-area: 2 / 3 / 3 / 4 ;
     margin: 5px;
     align-items: center;
 }
@@ -194,7 +221,7 @@ nav, footer {
 /* Links Section */
 
 #links {
-    grid-area: 8 / 1 / 9 / 4;
+    grid-area: 6 / 1 / 7 / 4;
 
     display: grid;
     grid-template-columns: 1fr;
@@ -202,10 +229,6 @@ nav, footer {
 
     background-color:dimgray;
     text-align: center;
-}
-
-.scroll-links {
-    grid-area: 2 / 1 / 3 / 4;
 }
 
 #header-links {
@@ -216,37 +239,14 @@ ul {
     grid-area: 3 / 1 / 4 / 4;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 /* Form Section */
 
 #form {
-    grid-area: 5 / 1 / 6 / 4;
+    grid-area: 3 / 1 / 4 / 4;
 
     background-color:dimgray;
     text-align: center;
-}
-
-footer {
-    background-color: gray;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.flex-ctr {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav, footer {
-    grid-column: span 2;
- }
-
-#scroll-up {
-    font-size: small;
-}
-
-#footer {
-    grid-area: 9 / 1 / 10 / 3;
 }
