--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@ body {
 .img1 {
     grid-area: 1 / 1 / 3 / 2;
     height: 250px;
-    background-color: dimgray;
+    background-color: black;
 }
 
 .img2 {
     grid-area: 1 / 3 / 3 / 4;
     height: 250px;
-    background-color: dimgray;
+    background-color: black;
 }
 
 h1 {
@@ -65,6 +65,12 @@ nav {
     height: 50px;
     background-color: gray;
 }
+
+#hamburger-icon {
+    color: white;
+    display: none;
+    text-decoration: none;
+  }
 
 a, p {
     font-size: 20px;
@@ -250,3 +256,100 @@ ul {
     background-color:dimgray;
     text-align: center;
 }
+
+.invalid {
+    display: none;
+    color: red;
+}
+
+/* Different Screen Widths */
+
+@media screen and (max-width:1466px) {
+    #edits {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    #streams {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+  }
+
+@media screen and (max-width:1200px) {
+    #live {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .topGrid {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .img1, .img2 {
+        display: none;
+    }
+  }
+
+@media screen and (max-width:565px) {
+    #livestream, #chat {
+        width: 480px;
+    }
+    #hamburger-icon {
+        display: inline;
+      }
+    .main-nav-item {
+        display: none;
+    }
+    .scroll-footer2 {
+        display: none;
+    }
+    footer, #scroll-up {
+        font-size: x-small;
+        flex-direction: column;
+    }
+    #footer {
+        margin: -20px;
+    }
+  }
+
+@media screen and (max-width:480px) {
+    #livestream, #chat, #clip1, #clip2, #clip3, #stream1, #stream2, #stream3 {
+        width: 240px;
+        height: 135px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    #hamburger-icon {
+        display: inline;
+      }
+    .main-nav-item {
+        display: none;
+    }
+    ul {
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 0;
+    }
+    .scroll-footer2 {
+        display: none;
+    }
+    footer, #scroll-up {
+        font-size: x-small;
+        flex-direction: column;
+    }
+    #footer {
+        margin: -20px;
+    }
+  }
+
